Fix comment section overflow with z index

--- a/web/UI/CSS/blogDetailPage.css
+++ b/web/UI/CSS/blogDetailPage.css
@@ -266,7 +266,7 @@ s
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 6rem;
     padding: 0 4rem;
     border-top: 0.2px rgb(219, 219, 219) solid;
 }
