--- a/web/UI/CSS/commentPage.css
+++ b/web/UI/CSS/commentPage.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
 * {
+    z-index: 10;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -13,7 +14,7 @@ body {
 }
 
 .comment-post {
-    margin-top: 4rem;
+    margin-top: 5rem;
     margin-left: 2vw;
 }
 
@@ -43,11 +44,12 @@ body {
 }
 
 .comment-input {
+    z-index: 1000;
     display: flex;
     align-items: center;
     position: fixed;
     top: 0%;
-    width: 100%;
+    width: 65%;
     background: white;
 }
 
@@ -99,4 +101,8 @@ body {
     position: absolute;
     top: -10px;
     right: -4px;
+}
+
+.container{
+    z-index: 1000;
 }
